--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "atxpaul",
     "version": "1.1.0",
+    "description": "Get to know AtxPaul via NPX!",
     "bin": {
         "atxpaul": "index.js"
     },
     "dependencies": {
-        "clear-any-console": "^1.16.2"
+        "cli-welcome": "^2.2.2"
     }
 }
