--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "chalk": "^4.1.0",
+        "cli-handle-unhandled": "^1.1.1",
         "cli-welcome": "^2.2.2",
         "log-symbols": "^4.0.0"
     },
