Added help and refactor

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
         "atxpaul": "index.js"
     },
     "dependencies": {
+        "atx-alerts": "^1.0.1",
         "chalk": "^4.1.0",
         "cli-handle-unhandled": "^1.1.1",
         "cli-welcome": "^2.2.2",
-        "log-symbols": "^4.0.0"
+        "log-symbols": "^4.0.0",
+        "meow": "^8.0.0"
     },
     "keywords": [
         "Pablo",
