Added features and prepared enquires

--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     },
     "dependencies": {
         "atx-alerts": "^1.0.1",
+        "await-to-js": "^2.1.1",
+        "axios": "^0.21.1",
+        "boxen": "^4.2.0",
         "chalk": "^4.1.0",
+        "cli-handle-error": "^4.4.0",
         "cli-handle-unhandled": "^1.1.1",
         "cli-welcome": "^2.2.2",
+        "enquirer": "^2.3.6",
         "log-symbols": "^4.0.0",
-        "meow": "^8.0.0"
+        "meow": "^8.0.0",
+        "ora": "^5.3.0"
     },
     "keywords": [
         "Pablo",
