--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "chalk": "^4.1.0",
         "cli-handle-error": "^4.4.0",
         "cli-handle-unhandled": "^1.1.1",
+        "cli-meow-help": "^2.0.2",
         "cli-welcome": "^2.2.2",
         "enquirer": "^2.3.6",
         "log-symbols": "^4.0.0",
